src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Address_Area__c</fullName>
        <label>Address Area</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Internal_Sales_Id__c</fullName>
        <label>Internal Sales Id</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_DataUploadDuplicate__c</fullName>
        <formula>$Setup.LG_ProfileExtensions__c.LG_DataUpload__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Upload Duplicate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_SalesChannel__c</fullName>
        <label>Sales Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Telesales Inbound</fullName>
                </value>
                <value>
                    <fullName>Telesales Outbound</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Account Management</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Shops</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Retention</fullName>
                </value>
                <value>
                    <fullName>B2B</fullName>
                </value>
                <value>
                    <fullName>MDU</fullName>
                    <default>true</default>
                    <label>MDU</label>
                </value>
                <value>
                    <fullName>D2D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_Signature__c</fullName>
        <label>Signature</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Admin Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>JIT_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>LG_SalesChannel__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>contains</operation>
            <value>.jit</value>
        </filters>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>notContain</operation>
            <value>=</value>
        </filters>
        <label>JIT Users</label>
        <language>en_US</language>
        <sharedTo/>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Company_name_not_blank</fullName>
        <active>true</active>
        <description>Please enter a company name</description>
        <errorConditionFormula>ISBLANK( CompanyName )</errorConditionFormula>
        <errorDisplayField>CompanyName</errorDisplayField>
        <errorMessage>Please enter a company name</errorMessage>
    </validationRules>
</CustomObject>